--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8000
 
 # mysql setting
-spring.datasource.url=jdbc:mysql://localhost:3306/docmng?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/documentmng?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
