--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=1234
 mybatis.type-aliases-package=com.khfc.documentmng.domain
 
 # XML Location
-mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 # thymeleaf
 spring.thymeleaf.prefix=classpath:templates/
